Alterações na pagina sobre sundae

--- a/sundae/index.html
+++ b/sundae/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header class="cabesalho">
-        <h1>Sundae, sobremesa deliciosa e geladinha !</h1>
-        <p>A sobremesa feita com sorvete com um sabor simples e encantador &#x1F924;</p>
+        <h1>Portal das sobremesas </h1>
+        <p>Sundae, sobremesa feita com sorvete com um sabor simples e encantador &#x1F924;</p>
         <nav>
             <a href="#">Home</a>
-            <a href="#">Sabores</a>
+            <a href="#">Outras sobremesas</a>
             <a href="#">Sobre</a>
         </nav>
     </header>
@@ -42,11 +42,32 @@
             </aside>
             <article>
                 <h2>Adicionais no Sundae &#x1F95C;</h2>
-                <aside>
-                    <img src="imagens/amendoim-triturado-898x353.png" alt="" style="width: 100%;">
-                </aside>
+                    <h3>Amendoim</h3>
+                    <p>O amendoim picado é um ingrediente versátil conhecido por sua textura crocante e sabor rico. Tanto utilizado em pratos doces como salgados, ele pode ser torrado para intensificar o sabor. Além de ser uma fonte de proteína e nutrientes, o amendoim picado é frequentemente usado em sobremesas, pratos asiáticos e como decoração final, proporcionando uma combinação única de sabores e texturas.</p>
+                    <h3>Bolinhas de Chcolate</h3>
+                    <p>Bolinhas de chocolate crocantes são pequenas delícias com uma cobertura de chocolate e um interior crocante, geralmente incorporando ingredientes como arroz tufado, cereal ou biscoitos triturados. Oferecem uma textura agradável e vêm em uma variedade de sabores, sendo frequentemente usadas como presentes ou petiscos em diferentes ocasiões. A versatilidade permite adaptações criativas e a combinação de diferentes ingredientes para criar opções únicas e saborosas.</p>
+                    <h3>Canudinhos wafers</h3>
+                    <p>Canudinhos wafer são produtos de confeitaria com formato cilíndrico, feitos de massa de wafer crocante. Geralmente recheados com diversos cremes, como chocolate ou avelã, são utilizados em sobremesas, milkshakes ou como petiscos individuais. Sua versatilidade permite usos criativos na cozinha, e são populares como presentes ou lembrancinhas. A textura crocante e o sabor suave tornam esses canudinhos perfeitos para o sundae.</p>
             </article>
         </section>
+            <article>
+                <h1>Curiosidades sobre o Sundae!</h1>
+                <ul style="list-style-type: '\2754\00A0\00A0';">
+                    <li>Origem Contestada:</li>
+                    <dt>A origem exata do sundae é contestada. Uma das histórias mais conhecidas sugere que a sobremesa foi criada por um farmacêutico em Evanston, Illinois, em resposta à proibição de venda de sorvetes aos domingos. O termo "sundae" teria sido escolhido para não ofender sensibilidades religiosas.</dt>
+                    <li>Variação Ortográfica:</li>
+                    <dt>O nome "sundae" é frequentemente escrito dessa maneira, mas em alguns lugares, como o estado de Nova York, também é conhecido como "sunday." A variação na ortografia pode ser encontrada em diferentes regiões.</dt>
+                    <li>Versões Regionais:</li>
+                    <dt>O sundae tem várias versões regionais e variações em todo o mundo. Cada lugar pode ter suas próprias receitas e tradições associadas à preparação desta sobremesa.</dt>
+                    <li>Dia Nacional do Sundae:</li>
+                    <dt>O Dia Nacional do Sundae é celebrado nos Estados Unidos em 20 de julho. É uma ocasião para apreciar essa deliciosa sobremesa em todas as suas variedades.</dt>
+                    <li>Comemorações Locais:</li>
+                    <dt>Algumas cidades têm festivais ou eventos dedicados ao sundae. Isso inclui concursos de preparação de sundaes, onde as pessoas competem para criar as combinações mais saborosas e criativas.</dt>
+                </ul>       
+            </article>
     </main>
+    <footer>
+        <p>Site criado por <a href="https://github.com/Mauro0Mau">Mauricio Silva de Souza</a></p>
+    </footer>
 </body>
 </html>
