--- a/sundae/index.html
+++ b/sundae/index.html
@@ -19,26 +19,26 @@
     </header>
     <main>
         <section>
-            <h2>A massa de sorvete do <strong>Sundae</strong>,multiplos sabores!</h2>
+            <h1>A massa de sorvete do <strong>Sundae</strong>,multiplos sabores!</h2>
             <article>
-                <h3>Massa de Morango &#x1F353;</h3>
+                <h2>Massa de Morango &#x1F353;</h2>
                 <p>O sorvete em massa sabor morango é uma delícia com um gosto predominante de morango, apresentando uma cor rosa ou vermelha vibrante. Sua textura é suave e cremosa, graças aos ingredientes básicos como leite, açúcar, creme e morangos. Alguns podem incluir pedaços reais de morango para adicionar textura. O sabor varia, sendo alguns mais suaves e outros mais intensos. É uma escolha popular, encontrada em supermercados e sorveterias.</p>
                 <img src="imagens/morango.png" alt="Massa de sundae sabor morango">
             </article>
             <article>
-                <h3>Massa de Chocolate &#x1F36B;</h3>
+                <h2>Massa de Chocolate &#x1F36B;</h2>
                 <p>O sorvete em massa sabor chocolate é uma delícia conhecida por seu gosto rico e cremoso. Feito com ingredientes de qualidade, como leite, creme e cacau, ele tem uma textura suave e um sabor profundo. Algumas versões incluem pedaços de chocolate para tornar a experiência mais interessante. Pode ser desfrutado sozinho ou com coberturas variadas, como calda de chocolate ou nozes. É uma escolha popular em todo o mundo, sendo apreciado por pessoas de todas as idades.</p>
                 <img src="imagens/chocolate.png" alt="Massa de sudae sabor chocolate">
             </article>
                 <article>
-                    <h3>Massa de Creme/Baunilha &#x1F366;</h3>
+                    <h2>Massa de Creme/Baunilha &#x1F366;</h3>
                     <p>O sorvete de baunilha é conhecido por seu sabor suave e delicado, com uma cor creme ou bege clara. Sua textura é cremosa, resultado da incorporação de ar durante o processo de fabricação. Feito com ingredientes como leite, creme, açúcar e extrato de baunilha, é uma escolha versátil que pode ser apreciada sozinha ou combinada com diversos toppings. Popular em todo o mundo, o sorvete de baunilha é um clássico associado à tradição, sendo usado como base para diversas sobremesas.</p>
                     <img src="imagens/creme.png" alt="">
                 </article>
             <aside>
                 <h1>Coberturas que refinam o sabor &#x1F924;</h1>
                 <p>As coberturas de sundae oferecem uma variedade de sabores, texturas e opções criativas para aprimorar a experiência do sorvete. Desde clássicos como chocolate e caramelo até opções mais saudáveis, como frutas frescas, essas coberturas proporcionam uma combinação única de elementos quentes e frios. A criatividade nas combinações é ilimitada, permitindo que as pessoas personalizem seus sundaes de acordo com suas preferências. As coberturas também podem ser sazonais e variar culturalmente, tornando a experiência do sundae diversificada e indulgente.</p>
-                <img src="imagens/coberturas-900x572.jpg" alt="Caudas de sorvete">
+                <img src="imagens/coberturas-900x572.png" alt="Caudas de sorvete">
             </aside>
             <article>
                 <h2>Adicionais no Sundae &#x1F95C;</h2>
