--- a/sundae/index.html
+++ b/sundae/index.html
@@ -8,7 +8,7 @@
     <title>Sundae</title>
 </head>
 <body>
-    <header class="cabesalho">
+    <header>
         <h1>Portal das sobremesas </h1>
         <p>Sundae, sobremesa feita com sorvete com um sabor simples e encantador &#x1F924;</p>
         <nav>
