--- a/sundae/index.html
+++ b/sundae/index.html
@@ -23,7 +23,9 @@
             <article>
                 <h2>Massa de Morango &#x1F353;</h2>
                 <p>O sorvete em massa sabor morango é uma delícia com um gosto predominante de morango, apresentando uma cor rosa ou vermelha vibrante. Sua textura é suave e cremosa, graças aos ingredientes básicos como leite, açúcar, creme e morangos. Alguns podem incluir pedaços reais de morango para adicionar textura. O sabor varia, sendo alguns mais suaves e outros mais intensos. É uma escolha popular, encontrada em supermercados e sorveterias.</p>
-                <img src="imagens/morango-g.png" alt="Massa de sundae sabor morango" class="img-mora">
+                <picture>
+                    <source media="(max-width: )" srcset="">
+                </picture>
             </article>
             <article>
                 <h2>Massa de Chocolate &#x1F36B;</h2>
