--- a/sundae/index.html
+++ b/sundae/index.html
@@ -13,7 +13,7 @@
         <p>Sundae, sobremesa feita com sorvete com um sabor simples e encantador &#x1F924;</p>
         <nav>
             <a href="#">Home</a>
-            <a href="#">Outras sobremesas</a>
+            <a href="#" style="margin-left: 10px; margin-right: 10px;">Outras sobremesas</a>
             <a href="#">Sobre</a>
         </nav>
     </header>
@@ -24,18 +24,25 @@
                 <h2>Massa de Morango &#x1F353;</h2>
                 <p>O sorvete em massa sabor morango é uma delícia com um gosto predominante de morango, apresentando uma cor rosa ou vermelha vibrante. Sua textura é suave e cremosa, graças aos ingredientes básicos como leite, açúcar, creme e morangos. Alguns podem incluir pedaços reais de morango para adicionar textura. O sabor varia, sendo alguns mais suaves e outros mais intensos. É uma escolha popular, encontrada em supermercados e sorveterias.</p>
                 <picture>
-                    <source media="(max-width: )" srcset="">
+                    <source media="(max-width: 600px)" srcset="imagens/morango-450x450.png" type="image/png">
+                    <img src="imagens/morango.png" alt="Massa de sorvete sabor Morango">
                 </picture>
             </article>
             <article>
                 <h2>Massa de Chocolate &#x1F36B;</h2>
                 <p>O sorvete em massa sabor chocolate é uma delícia conhecida por seu gosto rico e cremoso. Feito com ingredientes de qualidade, como leite, creme e cacau, ele tem uma textura suave e um sabor profundo. Algumas versões incluem pedaços de chocolate para tornar a experiência mais interessante. Pode ser desfrutado sozinho ou com coberturas variadas, como calda de chocolate ou nozes. É uma escolha popular em todo o mundo, sendo apreciado por pessoas de todas as idades.</p>
-                <img src="imagens/chocolate.png" alt="Massa de sudae sabor chocolate">
+                <picture>
+                    <source media="(max-width: 600px)" srcset="imagens/chocolate-450x450.png" type="image/png">
+                    <img src="imagens/chocolate.png" alt="Massa de sorvete sabor Chocolate">
+                </picture>
             </article>
                 <article>
                     <h2>Massa de Creme/Baunilha &#x1F366;</h3>
                     <p>O sorvete de baunilha é conhecido por seu sabor suave e delicado, com uma cor creme ou bege clara. Sua textura é cremosa, resultado da incorporação de ar durante o processo de fabricação. Feito com ingredientes como leite, creme, açúcar e extrato de baunilha, é uma escolha versátil que pode ser apreciada sozinha ou combinada com diversos toppings. Popular em todo o mundo, o sorvete de baunilha é um clássico associado à tradição, sendo usado como base para diversas sobremesas.</p>
-                    <img src="imagens/creme.png" alt="">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="imagens/creme-450x450.png" type="image/png">
+                        <img src="imagens/creme.png" alt="Massa de sorvete sabor Baunilha/Creme">
+                    </picture>
                 </article>
             <aside>
                 <h1>Coberturas que refinam o sabor &#x1F924;</h1>
