Site "finalizado" (Não confirmado)

--- a/sundae/index.html
+++ b/sundae/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Portal das sobremesas </h1>
-        <p>Sundae, sobremesa feita com sorvete com um sabor simples e encantador &#x1F924;</p>
+        <h2>Sundae, sobremesa feita com sorvete com um sabor simples e encantador &#x1F924;</h2>
         <nav>
             <a href="#">Home</a>
             <a href="#" style="margin-left: 10px; margin-right: 10px;">Outras sobremesas</a>
@@ -19,16 +19,16 @@
     </header>
     <main>
         <section>
-            <h1>A massa de sorvete do <strong>Sundae</strong>,multiplos sabores!</h2>
-            <article>
-                <h2>Massa de Morango &#x1F353;</h2>
-                <p>O sorvete em massa sabor morango é uma delícia com um gosto predominante de morango, apresentando uma cor rosa ou vermelha vibrante. Sua textura é suave e cremosa, graças aos ingredientes básicos como leite, açúcar, creme e morangos. Alguns podem incluir pedaços reais de morango para adicionar textura. O sabor varia, sendo alguns mais suaves e outros mais intensos. É uma escolha popular, encontrada em supermercados e sorveterias.</p>
+            <article class="morango">
+                <h1>A massa de sorvete do Sundae,multiplos sabores!</h2>
+                    <h2>Massa de Morango &#x1F353;</h2>
+                        <p>O sorvete em massa sabor morango é uma delícia com um gosto predominante de morango, apresentando uma cor rosa ou vermelha vibrante. Sua textura é suave e cremosa, graças aos ingredientes básicos como leite, açúcar, creme e morangos. Alguns podem incluir pedaços reais de morango para adicionar textura. O sabor varia, sendo alguns mais suaves e outros mais intensos. É uma escolha popular, encontrada em supermercados e sorveterias.</p>
                 <picture>
                     <source media="(max-width: 600px)" srcset="imagens/morango-450x450.png" type="image/png">
                     <img src="imagens/morango.png" alt="Massa de sorvete sabor Morango">
                 </picture>
             </article>
-            <article>
+            <article class="chocolate">
                 <h2>Massa de Chocolate &#x1F36B;</h2>
                 <p>O sorvete em massa sabor chocolate é uma delícia conhecida por seu gosto rico e cremoso. Feito com ingredientes de qualidade, como leite, creme e cacau, ele tem uma textura suave e um sabor profundo. Algumas versões incluem pedaços de chocolate para tornar a experiência mais interessante. Pode ser desfrutado sozinho ou com coberturas variadas, como calda de chocolate ou nozes. É uma escolha popular em todo o mundo, sendo apreciado por pessoas de todas as idades.</p>
                 <picture>
@@ -36,7 +36,7 @@
                     <img src="imagens/chocolate.png" alt="Massa de sorvete sabor Chocolate">
                 </picture>
             </article>
-                <article>
+                <article class="baunilha">
                     <h2>Massa de Creme/Baunilha &#x1F366;</h3>
                     <p>O sorvete de baunilha é conhecido por seu sabor suave e delicado, com uma cor creme ou bege clara. Sua textura é cremosa, resultado da incorporação de ar durante o processo de fabricação. Feito com ingredientes como leite, creme, açúcar e extrato de baunilha, é uma escolha versátil que pode ser apreciada sozinha ou combinada com diversos toppings. Popular em todo o mundo, o sorvete de baunilha é um clássico associado à tradição, sendo usado como base para diversas sobremesas.</p>
                     <picture>
@@ -49,8 +49,8 @@
                 <p>As coberturas de sundae oferecem uma variedade de sabores, texturas e opções criativas para aprimorar a experiência do sorvete. Desde clássicos como chocolate e caramelo até opções mais saudáveis, como frutas frescas, essas coberturas proporcionam uma combinação única de elementos quentes e frios. A criatividade nas combinações é ilimitada, permitindo que as pessoas personalizem seus sundaes de acordo com suas preferências. As coberturas também podem ser sazonais e variar culturalmente, tornando a experiência do sundae diversificada e indulgente.</p>
                 <img src="imagens/coberturas-900x572.png" alt="Caudas de sorvete">
             </aside>
-            <article>
-                <h2>Adicionais no Sundae &#x1F95C;</h2>
+            <article class="adicionais">
+                <h2 style="font-size: 2.9em;">Adicionais no Sundae &#x1F95C;</h2>
                     <h3>Amendoim</h3>
                     <p>O amendoim picado é um ingrediente versátil conhecido por sua textura crocante e sabor rico. Tanto utilizado em pratos doces como salgados, ele pode ser torrado para intensificar o sabor. Além de ser uma fonte de proteína e nutrientes, o amendoim picado é frequentemente usado em sobremesas, pratos asiáticos e como decoração final, proporcionando uma combinação única de sabores e texturas.</p>
                     <h3>Bolinhas de Chcolate</h3>
@@ -59,19 +59,29 @@
                     <p>Canudinhos wafer são produtos de confeitaria com formato cilíndrico, feitos de massa de wafer crocante. Geralmente recheados com diversos cremes, como chocolate ou avelã, são utilizados em sobremesas, milkshakes ou como petiscos individuais. Sua versatilidade permite usos criativos na cozinha, e são populares como presentes ou lembrancinhas. A textura crocante e o sabor suave tornam esses canudinhos perfeitos para o sundae.</p>
             </article>
         </section>
-            <article>
-                <h1>Curiosidades sobre o Sundae!</h1>
+            <article class="curiosidades">
+                <h1 style="font-size: 2.9em;">Curiosidades sobre o Sundae!</h1>
                 <ul style="list-style-type: '\2754\00A0\00A0';">
-                    <li>Origem Contestada:</li>
-                    <dt>A origem exata do sundae é contestada. Uma das histórias mais conhecidas sugere que a sobremesa foi criada por um farmacêutico em Evanston, Illinois, em resposta à proibição de venda de sorvetes aos domingos. O termo "sundae" teria sido escolhido para não ofender sensibilidades religiosas.</dt>
-                    <li>Variação Ortográfica:</li>
-                    <dt>O nome "sundae" é frequentemente escrito dessa maneira, mas em alguns lugares, como o estado de Nova York, também é conhecido como "sunday." A variação na ortografia pode ser encontrada em diferentes regiões.</dt>
-                    <li>Versões Regionais:</li>
-                    <dt>O sundae tem várias versões regionais e variações em todo o mundo. Cada lugar pode ter suas próprias receitas e tradições associadas à preparação desta sobremesa.</dt>
-                    <li>Dia Nacional do Sundae:</li>
-                    <dt>O Dia Nacional do Sundae é celebrado nos Estados Unidos em 20 de julho. É uma ocasião para apreciar essa deliciosa sobremesa em todas as suas variedades.</dt>
-                    <li>Comemorações Locais:</li>
-                    <dt>Algumas cidades têm festivais ou eventos dedicados ao sundae. Isso inclui concursos de preparação de sundaes, onde as pessoas competem para criar as combinações mais saborosas e criativas.</dt>
+                    <p>
+                        <li>Origem Contestada:</li>
+                        <dt style="text-indent: 35px;">A origem exata do sundae é contestada. Uma das histórias mais conhecidas sugere que a sobremesa foi criada por um farmacêutico em Evanston, Illinois, em resposta à proibição de venda de sorvetes aos domingos. O termo "sundae" teria sido escolhido para não ofender sensibilidades religiosas.</dt>
+                    </p>
+                    <p>
+                        <li>Variação Ortográfica:</li>
+                        <dt style="text-indent: 35px;">O nome "sundae" é frequentemente escrito dessa maneira, mas em alguns lugares, como o estado de Nova York, também é conhecido como "sunday." A variação na ortografia pode ser encontrada em diferentes regiões.</dt>
+                    </p>
+                    <p>
+                        <li>Versões Regionais:</li>
+                        <dt style="text-indent: 35px;">O sundae tem várias versões regionais e variações em todo o mundo. Cada lugar pode ter suas próprias receitas e tradições associadas à preparação desta sobremesa.</dt>
+                    </p>
+                    <p>
+                        <li>Dia Nacional do Sundae:</li>
+                        <dt style="text-indent: 35px;">O Dia Nacional do Sundae é celebrado nos Estados Unidos em 20 de julho. É uma ocasião para apreciar essa deliciosa sobremesa em todas as suas variedades.</dt>
+                    </p>
+                    <p>
+                        <li>Comemorações Locais:</li>
+                        <dt style="text-indent: 35px;">Algumas cidades têm festivais ou eventos dedicados ao sundae. Isso inclui concursos de preparação de sundaes, onde as pessoas competem para criar as combinações mais saborosas e criativas.</dt>
+                    </p>
                 </ul>       
             </article>
     </main>
